# VoxelMage

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mage
.clangd/index/: Camera.h.57B5920FC0C2AECD.idx  CameraControls.h.79145FFD39F0809F.idx  InputHandler.h.F79371F3C984DE3A.idx  Renderer.h.7233AA0658717DA0.idx  ShaderManager.h.A5F9A10838D69DBF.idx  context.c.46298A3649AEA8AE.idx  egl_context.c.7E6897D8FF4EAD52.idx  egl_context.h.A1190FF78183737B.idx  glew.c.F32B5EE761F6ACBB.idx  glew.h.251E2C6303B6466C.idx  glewinfo.c.32CB618ACA74A82E.idx  glfw3.h.0F67C2833742DC18.idx  glx_context.c.3B4EC77BCBACB897.idx  glx_context.h.A958341F5813D7BA.idx  glxew.h.41BC9B5BF401B8B1.idx  init.c.2C9469B4C647041A.idx  input.c.1266C0AC11108FCD.idx  internal.h.F56122ACED95816D.idx  linux_joystick.c.E8AE9A226051E634.idx  linux_joystick.h.9F59C08A98D58B53.idx  mage.cpp.22F750985C5C2C94.idx  mappings.h.6D279861A1019345.idx  monitor.c.360D7E9C5D644757.idx  osmesa_context.c.ACE82D7832E39808.idx  osmesa_context.h.E2DC7EB4A3BC7E9C.idx  posix_thread.c.8182893EB6DDC459.idx  posix_thread.h.121DB283AF56DF89.idx  posix_time.c.39A07ABBD98F4860.idx  posix_time.h.B08EB6A74067197F.idx  utils.h.6435A14FB80B1764.idx  visualinfo.c.0747C8D51739BF32.idx  vulkan.c.8C2A627332C85A24.idx  window.c.94BA6783AD905BDF.idx  x11_init.c.4E80C269C527BD59.idx  x11_monitor.c.8BC74ACBD485AECE.idx  x11_platform.h.52E392FF6D44F83B.idx  x11_window.c.0C6324B1EDD96549.idx  xkb_unicode.c.4EECEF10B86E1111.idx  xkb_unicode.h.E223308A15F76692.idx
assets/shaders/: TestFragmentShader.fs  TestVertexShader.vs
lib/: libGLEW.so.2.1.0
src/: Block.cpp  Block.h  Camera.cpp  Camera.h  CameraControls.cpp  CameraControls.h  Chunk.cpp  Chunk.h  Clock.cpp  Clock.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderManager.h  mage.cpp  utils.h
